--- a/src/main/resources/templates/Package/show.html
+++ b/src/main/resources/templates/Package/show.html
@@ -120,7 +120,8 @@ document.addEventListener("DOMContentLoaded", function() {
                                             </a>
                                         </td>
                                         <td th:text="${package.piecesCarton}"></td>
-                                        <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
+
+                                        <th:block th:if="${session.sessionToken != null and (session.sessionRole == 'ADMIN' or session.sessionRole == 'PRODUCTION_MANAGER')}">
                                             <td>
                                                 <form th:action="@{'/package/materials/' + ${package.id}}" method="get">
                                                     <button type="submit" style="background: none; border: none; padding: 0; cursor: pointer;" title="Натисни, за да получиш емаил с налични материали за тази кутия">
@@ -128,6 +129,8 @@ document.addEventListener("DOMContentLoaded", function() {
                                                     </button>
                                                 </form>
                                             </td>
+                                        </th:block>
+                                        <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
                                             <td>
                                                 <form th:action="@{'/package/delete/' + ${package.id}}" method="post"
                                                       th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете пакет с име: ' + ${package.name} + '?\');'">
