--- a/src/main/resources/templates/Product/produce.html
+++ b/src/main/resources/templates/Product/produce.html
@@ -44,6 +44,16 @@
       }
     </style>
 </head>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const navbar = document.getElementById("sidebar");
+        console.log(navbar);
+        const toggler = document.querySelector("a.sidebar-toggle");
+        toggler.addEventListener("click", () => {
+        navbar.classList.toggle("collapsed");
+        });
+    });
+</script>
 <body>
 <div class="wrapper">
     <th:block th:insert="~{fragments/header}"></th:block>
